--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_light">
 
+
+        <ListView
+            android:id="@+id/booksList"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent" />
+
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
