--- a/app/src/main/res/layout/book_on_shelf.xml
+++ b/app/src/main/res/layout/book_on_shelf.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@drawable/bookbg">
 
     <ImageView
         android:id="@+id/iconBook"
@@ -11,7 +12,7 @@
         android:layout_height="100dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="16dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
