--- a/app/src/main/res/layout/fragment_addnewbook.xml
+++ b/app/src/main/res/layout/fragment_addnewbook.xml
@@ -148,7 +148,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/rTextDescription"
             android:layout_marginTop="5dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/grad"
             android:text="Добавить"
             android:textColor="@android:color/white" />
     </RelativeLayout>
