--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,10 +6,10 @@
     android:background="@android:color/background_light">
 
 
-        <ListView
-            android:id="@+id/booksList"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent" />
+    <ListView
+        android:id="@+id/booksList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 
