--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/white"
-                android:hint="Логин"/>
+                android:hint="Почта"/>
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
