--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@drawable/regbg">
 
     <LinearLayout
         android:orientation="vertical"
@@ -29,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
-                android:hint="Name" />
+                android:hint="Имя" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Email Label -->
@@ -42,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="Почта" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
@@ -55,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="Пароль"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Signup Button -->
@@ -68,7 +69,7 @@
             android:padding="12dp"
             android:background="@drawable/grad"
             android:textColor="@color/white"
-            android:text="Create Account"/>
+            android:text="Создать аккаунт"/>
 
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
