--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,14 +57,15 @@
             android:textColor="@color/white"
             android:text="Войти"/>
 
-        <TextView android:id="@+id/link_signup"
+        <TextView
+            android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            android:gravity="center"
             android:text="Нет аккаунта? Создай!"
             android:textColor="@color/colorPrimary"
-            android:gravity="center"
-            android:textSize="16dip"/>
+            android:textSize="16dip" />
 
     </LinearLayout>
 </RelativeLayout>
