--- a/app/src/main/res/layout/place_bottom_sheet.xml
+++ b/app/src/main/res/layout/place_bottom_sheet.xml
@@ -8,14 +8,6 @@
     android:paddingTop="8dp">
     <!---android:background="@drawable/bookbg"-->
 
-    <ImageView
-        android:id="@+id/iconPlace"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="16dp"
-        android:scaleType="centerCrop" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,6 +17,7 @@
             android:id="@+id/nameplace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:fontFamily="@font/roboto"
             android:text="Название"
             android:textSize="18sp"
@@ -34,13 +27,38 @@
             android:id="@+id/shortadress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:fontFamily="@font/roboto"
             android:text="Адрес" />
+
         <Button
+            android:id="@+id/btnShowbooks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:fontFamily="@font/roboto"
-            android:text="Показать книги"/>
+            android:text="Показать книги" />
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:backgroundTint="@color/colorPrimary">
+
+            <EditText
+                android:id="@+id/editCode"
+                android:layout_width="182dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:hint="Введите код"
+                android:textColorHint="@color/white" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnAddbook_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:fontFamily="@font/roboto"
+            android:text="Добавить книгу" />
     </LinearLayout>
 </LinearLayout>
